<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.osmdroid.views.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/btn_geolocate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Géolocaliser"
        android:layout_margin="16dp" />
</FrameLayout>