<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_map_view"
        android:icon="@drawable/ic_map"
        android:title="@string/map_view"/>
    <item
        android:id="@+id/nav_list_view"
        android:icon="@drawable/ic_list"
        android:title="@string/list_view"/>
    <item
        android:id="@+id/nav_workmates"
        android:icon="@drawable/ic_workmates"
        android:title="@string/workmates"/>
</menu>