...
            android:text="@string/app_info"
            android:textSize="12sp"
            android:textStyle="italic|bold"
            android:textColor="@color/text_white" />

        <RelativeLayout
            android:id="@+id/google_sign_in_button"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:background="@drawable/button_background"
            android:padding="20dp">

...
